--- a/index.html
+++ b/index.html
@@ -1,10 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Dragon Mistress | Cosplayer</title> 
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/css/estilos.css">
+	<!--google font -->
+	<link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
+
+</head>
+
 </head>
 <body>
-	
+	<nav class="navbar navbar-default">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">Dragon Mistr3ss</a>
+		</div>
+
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav arriba">
+				<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+				<li><a href="#">VideoJuegos</a></li>
+				<li><a href="#">Tecnologia</a></li>
+				<li><a href="#">Patreon</a></li>
+				<li><a href="#">Galeria</a></li>
+				<li><a href="#">Backstage</a></li>
+			</ul>
+		</div><!-- /.navbar-collapse -->
+	</nav>
+	<div class="jumbotron">
+		<h1>¡¡Patreon!!</h1>
+		<p>Ayudame a hacer muchos mas cosplay y mas rapido a cambio de contenido excluisvo, interaccion personalizada y  mucho mas </p>
+		<p><a class="btn btn-default btn-lg" href="#" role="button">Accede aqui!</a></p>
+	</div>
+	<section>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="assets/img/kitana.jpg" alt="...">
+					<div class="caption">
+						<h3>Kitana - Mortal Kombat</h3>
+						<p><a href="#" class="btn btn-default" role="button">Leer Mas</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="assets/img/d.va.JPG" alt="...">
+					<div class="caption">
+						<h3>D.VA - Overwatch</h3>
+						<p><a href="#" class="btn btn-default" role="button">Leer Mas</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="assets/img/miku.jpg" class="img-responsive" alt="Responsive image" class="img-circle">
+					<div class="caption">
+						<h3>Hatsune Miku - Vocaloid</h3>
+						<p><a href="#" class="btn btn-default" role="button">Leer Mas</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="assets/img/kylo2.jpeg" class="img-responsive" alt="...">
+					<div class="caption">
+						<h3>Kylo Ren - Star War</h3>
+						<p><a href="#" class="btn btn-default" role="button">Leer Mas</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="assets/img/loki.jpg" alt="...">
+					<div class="caption">
+						<h3>Loki - Thor Ragnaroc</h3>
+						<p><a href="#" class="btn btn-default" role="button">Leer Mas</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="assets/img/ww.JPG" class="img-responsive"alt="...">
+					<div class="caption">
+						<h3>Wonder Woman - DC </h3>
+						<p><a href="#" class="btn btn-default" role="button">Leer Mas</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<div class="articulo">
+		<div class="row">
+			<div class="columna col-xs-12 col-md-4">
+				<span  class="up"><i class="fas fa-calendar-alt"></i></span>
+				<h2>Proximos</h2>
+				<h2>Eventos</h2>
+			</div>
+			<div class="columna col-xs-12  col-md-4">
+				<span  class="up"><i class="fab fa-youtube"></i></span>
+				<h2>Tutorial</h2>
+				<h2> DIY </h2>
+			</div>
+			<div class="compra col-xs-12 col-md-4">
+				<span  class="up"><i class="fas fa-shopping-cart"></i></span>
+				<h2>Donde comprar materiales?</h2>
+			</div>
+		</div>
+	</div>
+	<div class="form">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<h1>Contacto</h1>
+				<form class="form-inline">
+					<div class="form-group">
+						<label for="exampleInputName2">Nombre</label>
+						<input type="text" class="form-control" id="exampleInputName2" placeholder="Ariana Paz">
+					</div>
+					<div class="form-group">
+						<label for="exampleInputEmail2">Mail</label>
+						<input type="email" class="form-control" id="exampleInputEmail2" placeholder="thanos.24@example.com">
+					</div>
+					<br>
+				</form>
+				<label for="exampleInputEmail2">Mensaje</label>
+				<textarea class="form-control" rows="3" placeholder="escribir mensaje aqui"></textarea>
+				<button type="submit" class="btn btn-default">Enviar</button>
+			</div>
+		</div>
+	</div>
+	<footer class=row>
+		<div class="panel panel-default col-xs-12 col-md-12">
+			<div class="panel-body redes-container">
+				<ul class="redes">	
+					<li><i class="fab fa-facebook-square"></i></li>
+					<li><i class="fab fa-instagram"></i></li>
+					<li><i class="fab fa-snapchat"></i></li>
+					<li><i class="fab fa-twitter"></i></li>
+				</ul>
+				<a class="bajo" href="#">Dragon Mistr3ss</a>
+			</div>
+		</div>
+	</footer>
+	<!--font awesome-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
