--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="app.js">
+
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/estilos.css">
@@ -33,12 +36,12 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav arriba">
-				<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-				<li><a href="#">VideoJuegos</a></li>
-				<li><a href="#">Tecnologia</a></li>
-				<li><a href="#">Patreon</a></li>
-				<li><a href="#">Galeria</a></li>
-				<li><a href="#">Backstage</a></li>
+				<li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+				<li><a href="videoJuegos.html">VideoJuegos</a></li>
+				<li><a href="Tecnologia.html">Tecnologia</a></li>
+				<li><a href="SobreMi.html">Sobre Mi</a></li>
+				<li><a href="Galeria.html">Galeria</a></li>
+				<li><a href="Backstage.html">Backstage</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</nav>
